# ketamine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  modules  routes
example_plugin/: plugin.c
sdk/: base.h  logging.h  module_sdk.h  sdk.h
src/: cfgroute.c  cfgroute.h  cli.c  cli.h  client.c  client.h  defs.h  example.c  fio.c  fio.h  global.c  global.h  gplogging.h  main.c  parse.c  parse.h  request.c  request.h  routing.c  routing.h  server.c  server.h  settings.h  slog.h  threadsafe.c  threadsafe.h  util.c  util.h
src/http/: http.c  http.h
src/modules/: cfgmodule.c  cfgmodule.h  middleware.c  middleware.h  modules.c  modules.h  overrides.c  overrides.h
